--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.5s">
 				<div class="trainer-thumb">
-					<img src="images/om-krishna.png" class="img-responsive" alt="Head">
+					<img src="images/om-krishna.jpeg" class="img-responsive" alt="Head">
 						<div class="trainer-overlay">
 							<div class="trainer-des">
 								<h2>Om Krishna Yadav</h2>
